fix broken link to help for user guide

--- a/templates/nunjucks/base.njk.html
+++ b/templates/nunjucks/base.njk.html
@@ -141,7 +141,7 @@
 {{ headerNavLink('Content', '/admin/category/string', contentActive) }}
 {{ headerNavLink('Configure', '/admin/instance/service', configurationActive) }}
 {{ headerNavLink('Run form', '/', false) }}
-{{ headerNavLink('Help', 'https://fb-user-guide-dev.apps.cloud-platform-live-0.k8s.integration.dsd.io/', false, {target: 'fb-help', classes: 'fb-external fb-external--docs'}) }}
+{{ headerNavLink('Help', 'https://form-builder-user-guide.form.service.justice.gov.uk', false, {target: 'fb-help', classes: 'fb-external fb-external--docs'}) }}
 </ul>
 </nav>
 
