--- a/specifications/flowstep/flowstep.njk
+++ b/specifications/flowstep/flowstep.njk
@@ -1,20 +1,20 @@
-{%- macro flowstep(data) -%}
+{%- macro flowStep(data) -%}
 {% if data.$stepSkip %}
-{% set stepClasses = 'fb-step-skip' %}
-{% if data.$stepSkipFirst %}{% set stepClasses = stepClasses + ' fb-step-skip-first' %}{% endif %}
-{% if data.$stepSkipLast %}{% set stepClasses = stepClasses + ' fb-step-skip-last' %}{% endif %}
+  {% set stepClasses = 'fb-step-skip' %}
+  {% if data.$stepSkipFirst %}{% set stepClasses = stepClasses + ' fb-step-skip-first' %}{% endif %}
+  {% if data.$stepSkipLast %}{% set stepClasses = stepClasses + ' fb-step-skip-last' %}{% endif %}
 {% endif %}
 {% if data.$stepOption %}
-{% set stepClasses = 'fb-step-option' %}
-{% set isInnerStepOption = true %}
-{% if data.$stepOptionFirst %}
-  {% set stepClasses = stepClasses + ' fb-step-option-first' %}
-  {% set isInnerStepOption = false %}
-{% endif %}
-{% if data.$stepOptionLast %}
-  {% set stepClasses = stepClasses + ' fb-step-option-last' %}
-  {% set isInnerStepOption = false %}
-{% endif %}
+  {% set stepClasses = 'fb-step-option' %}
+  {% set isInnerStepOption = true %}
+  {% if data.$stepOptionFirst %}
+    {% set stepClasses = stepClasses + ' fb-step-option-first' %}
+    {% set isInnerStepOption = false %}
+  {% endif %}
+  {% if data.$stepOptionLast %}
+    {% set stepClasses = stepClasses + ' fb-step-option-last' %}
+    {% set isInnerStepOption = false %}
+  {% endif %}
 {% endif %}
 
 {% if data.$stepSkipFirst %}<div class="fb-step-skip-container"><div class="fb-step-skip-container-line fb-step-skip-container-first"></div>{% endif %}
@@ -35,26 +35,23 @@
 {% endif %}
 <div class="fb-step {{data.classes}}{% if data.$flowStart %} fb-flow-start{% endif %}{% if data._type === 'page.exit' %} fb-flow-exit{% endif %}">
 <div class="fb-step-details govuk-prose-scope">
-{# <h2><span class="fb-page-link-type">URL</span> <a href="{{ data.url }}">{{ data.url }}</a></h2> #}
 <ul class="fb-page-links">
-{# <li><span class="fb-page-link-type"><a href="{% if data.url != '/' %}{{ data.url }}{% else %}/{% endif %}">Live view</a></span></li> #}
 <li><span class="fb-page-link-type"><a href="{% if data.url != '/' %}{{ data.url }}/edit{% else %}/edit{% endif %}">Edit page</a></span></li>
 <li><span class="fb-page-link-type"><a href="{% if data.url != '/' %}{{ data.url }}/preview{% else %}/preview{% endif %}">Preview</a></span></li>
 {% if not data.$autoInjected %}
-{# <li><span class="fb-page-link-type"><a href="{% if data.url != '/' %}{{ data.url }}/instance{% else %}/instance{% endif %}">Properties mode</a></span></li> #}
 {% endif %}
 </ul>
-{% if data.flowsteps %}
+{% if data.flowSteps %}
 <div class="fb-page-steps">
 <h3>Step settings</h3>
 <ul>
 <li><a href="/admin/new/{{ data._id }}/steps/edit">Add step</a></li>
-{% if data.flowsteps.length > 1 %}
+{% if data.hasChangeFlowSteps %}
 <li><a href="/admin/instance/{{ data._id }}/steps">Remove/reorder steps</a></li>
 {% endif %}
 {% if not data.$flowStart %}
 <li><a href="/admin/instance/{{ data._id }}/showSteps">Set steps condition</a></li>
-{% if not data.$flowSelf and data.flowsteps.length %}
+{% if not data.$flowSelf and data.hasChangeFlowSteps %}
 <li><a href="/admin/flow/{{ data._id }}">View only this step and its steps</a></li>
 {% endif %}
 {% endif %}
@@ -70,9 +67,9 @@
 {% endif %}
 <p class="fb-page-url"><span class="fb-page-url--label">URL</span> {% if data.url === '/' %}/{% else %}<a href="/admin/instance/{{ data._id }}/url">{{ data.url or 'Not yet specified' }}</a>{% endif %}</p>
 </div>
-{% if data.flowsteps %}
+{% if data.flowSteps %}
 {% if data.$skipSubSteps %}
-{% if data.flowsteps[0].$showConditions %}
+{% if data.flowSteps[0].$showConditions %}
 {% set subStepsConditionWithFollowingCondition = true %}
 {% endif %}
 {% endif %}
@@ -90,8 +87,8 @@
 {% endif %}
 {% endif %}
 {% endif %}
-{%- for flowstep in data.flowsteps -%}
-{{- callMacro('flowstep', flowstep) -}}
+{%- for flowStep in data.flowSteps -%}
+{{- callMacro('flowStep', flowStep) -}}
 {%- endfor -%}
 </div>
 {% endif %}
