--- a/templates/nunjucks/admin-page.njk.html
+++ b/templates/nunjucks/admin-page.njk.html
@@ -252,7 +252,7 @@ ul.tree, ul.tree ul {
   list-style: none;
   margin: 0;
   padding: 0;
-} 
+}
 ul.tree li {
   font-size: 14px;
   margin: 0;
@@ -334,7 +334,7 @@ ul.tree ul li:last-child {
   width: 1rem;
 }
 ul.tree ul li:last-child:before {
-  border-left: 1px solid rgb(100,100,100);   
+  border-left: 1px solid rgb(100,100,100);
 }
 
 .fb-instance-validation > summary {
@@ -347,53 +347,7 @@ ul.tree ul li:last-child:before {
 </style>
 
 <script src="/assets/autosize.js"></script>
-<script type="text/javascript">
-const $textareas = document.querySelectorAll('textarea')
-if ($textareas.length) {
-  autosize($textareas)
-  setInterval(function () {
-    autosize.update($textareas)
-  }, 100)
-}
-</script>
-<script>
-(function () {
-  const detailsState = JSON.parse(localStorage.getItem('fbDetailsState') || '{}')
-  const location = window.location.href
-  detailsState[location] = detailsState[location] || {}
-  const detailsLocationState = detailsState[location]
-  if (Object.keys(detailsLocationState).length) {
-    Object.keys(detailsLocationState).forEach(dataBlockId => {
-      const details = document.querySelector(`[data-block-id="${dataBlockId}"]`)
-      if (details) {
-        details.open = detailsLocationState[dataBlockId]
-      }
-    })
-  }
-  const detailsList = [].slice.call(document.querySelectorAll('details'))
-  detailsList.forEach(details => {
-    details.addEventListener('click', function(e) {
-      e.stopPropagation()
-      const target = e.target
-      if (!target.className.match(/govuk-details__summary/)) {
-        return
-      }
-      const dataBlockId = this.getAttribute('data-block-id')
-      if (!dataBlockId) {
-        return
-      }
-      const newState = !this.open
-      detailsLocationState[dataBlockId] = newState
-      localStorage.setItem('fbDetailsState', JSON.stringify(detailsState))
-    })
-  })
-
-  setTimeout(() => {
-    document.querySelector('.admin-content').style.position = 'relative'
-  }, 10)
-  
-})()
-</script>
+<script src="/assets/javascripts/page/admin-0.0.169.js"></script>
 {% endblock %}
 
 {% block pageContentAction %}{% endblock %}
