--- a/assets/stylesheets/page.flow-0.1.3.css
+++ b/assets/stylesheets/page.flow-0.1.3.css
@@ -21,7 +21,9 @@ html {
 
 .fb-flow-wrapper {
   margin-left: -150px;
+  -webkit-transform-origin: top left;
   transform-origin: top left;
+  -webkit-transform: scale(.375);
   transform: scale(.375);
   white-space: nowrap;
   vertical-align: top
@@ -481,12 +483,16 @@ footer.govuk-footer {
 }
 
 .govuk-footer__meta-item--grow {
+  -webkit-transform-origin: bottom left;
   transform-origin: bottom left;
+  -webkit-transform: scale(.75);
   transform: scale(.75)
 }
 
 .govuk-footer__copyright-logo {
+  -webkit-transform-origin: bottom right;
   transform-origin: bottom right;
+  -webkit-transform: scale(.5);
   transform: scale(.5)
 }
 
@@ -510,7 +516,9 @@ footer.govuk-footer {
 #minimapContainer .govuk-main-wrapper {
   position: relative;
   z-index: 1001;
+  -webkit-transform-origin: top left;
   transform-origin: top left;
+  -webkit-transform: scale(.05);
   transform: scale(.05)
 }
 
@@ -534,4 +542,4 @@ footer.govuk-footer {
     -webkit-print-color-adjust: exact
   }
 }
-/*# sourceMappingURL=page.flow-0.1.2.css.map */
+/*# sourceMappingURL=page.flow-0.1.3.css.map */
