--- a/assets/stylesheets/app-0.1.3.css
+++ b/assets/stylesheets/app-0.1.3.css
@@ -110,6 +110,7 @@
 .fb-navigation ul {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
   display: flex
 }
 
@@ -381,4 +382,4 @@ button.govuk-button.fb-editor-button {
 .fb-block--add:active:before {
   top: 0
 }
-/*# sourceMappingURL=app-0.1.2.css.map */
+/*# sourceMappingURL=app-0.1.3.css.map */
