--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,4 +1,6 @@
 // 1
+@import "node_modules/govuk-frontend/govuk/all";
+@import "node_modules/@ministryofjustice/frontend/moj/all";
 
 .fb-editor-liveheader {
   position: absolute;
