--- a/specifications/page/flow/template/nunjucks/page.flow.njk.html
+++ b/specifications/page/flow/template/nunjucks/page.flow.njk.html
@@ -1,7 +1,8 @@
 {% extends "_page.njk.html" %}
 
 {% block content %}
-  <h1>{{ page.heading }}</h1>
+  {{ callMacro('pageActions', page.heading) }}
+
   <div class="fb-flow-wrapper">
     {% for flowStep in page.flowSteps %}
     <div class="fb-flow-container">
