--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -6,6 +6,49 @@
 	margin-left: 15px !important;
 }
 
+.moj-editor-primary-navigation__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 0 0 0 !important;
+  padding: 0 0 0 0;
+}
+
+.moj-primary-navigation__nav {
+  text-align: right;
+}
+
+.moj-primary-navigation__identity {
+  display: inline-block;
+  text-align: left;
+}
+
+.moj-primary-navigation__identity-title {
+  display: inline-block;
+  font-family: "GDS Transport", Arial, sans-serif;
+  font-size: 0.875rem;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.25;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  vertical-align: middle;
+}
+
+.moj-page-header-actions__actions {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.moj-button-menu {
+  display: inline-block;
+  position: relative;
+}
+
+.fb-flow-container .fb-editor-header--wrapper {
+  display: none;
+}
+
 .fb-editor-liveheader {
   position: absolute;
   right: 5rem;
