--- a/specifications/pageActions/pageActions.njk
+++ b/specifications/pageActions/pageActions.njk
@@ -1,5 +1,5 @@
 {% macro pageActions(data) %}
-  <div class="moj-page-header-actions"
+  <div class="moj-page-header-actions">
     <h1 class="govuk-heading-xl">{{ data }}</h1>
     <div class="moj-page-header-actions__actions">
       <div class="moj-button-menu">
@@ -8,12 +8,10 @@
       		Add page
       		</a>
       	</div>
+        <div class="govuk-!-font-size-19 govuk-!-margin-top-2" style="float: right; font-family: GDS Transport">
+  	      <a href="/admin/flow">Flow</a> / <a href="/admin">List</a>
+        </div>
       </div>
-    </div>
-  </div>
-  <div class="moj-action-bar">
-    <div class="govuk-!-font-size-19 govuk-!-margin-top-2" style="float: right; font-family: GDS Transport">
-  	  <a href="/admin/flow">Flow</a> / <a href="/admin">List</a>
     </div>
   </div>
 {% endmacro %}
