Move header to main division

--- a/assets/stylesheets/app-0.1.6.css
+++ b/assets/stylesheets/app-0.1.6.css
@@ -947,8 +947,7 @@
 .govuk-width-container {
   max-width: 960px;
   margin-right: 15px;
-  margin-left: 15px;
-  max-width: none
+  margin-left: 15px
 }
 
 @supports (margin:max(calc(0px))) {
