--- a/templates/nunjucks/base.njk.html
+++ b/templates/nunjucks/base.njk.html
@@ -76,6 +76,10 @@
 	</div>
 </div>
 
+{% if flowActive %}
+  {{ callMacro('pageActions', 'Page flow') }}
+{% endif %}
+
 {% if page.MODEURL %}
 {% set MODEURL = page.MODEURL %}
 {% if MODEURL == '/' %}
