Add navigation layout to the page list

--- a/assets/stylesheets/app-0.1.6.css
+++ b/assets/stylesheets/app-0.1.6.css
@@ -7737,9 +7737,14 @@ span.moj-header__link:hover {
   margin-bottom: 40px;
   min-height: 40px;
   text-align: justify;
+  background: #fff;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between
+  justify-content: space-between;
+  margin-bottom: 0!important;
+  padding-top: 1.5rem;
+  padding-right: 1.5rem;
+  padding-left: 4rem
 }
 
 .moj-page-header-actions:after {
@@ -9352,8 +9357,14 @@ span.moj-header__link:hover {
   position: relative
 }
 
-.fb-editor-header--wrapper + .govuk-width-container {
-  margin: 6rem 0 0
+.editor-page-flow .fb-editor-header--wrapper + .govuk-width-container {
+  margin: 12rem 0 0
+}
+
+.editor-page-list .govuk-width-container {
+  bottom: 6rem;
+  margin-left: 4rem;
+  position: relative
 }
 
 .govuk-skip-link + .govuk-width-container {
