--- a/specifications/pageActions/pageActions.njk
+++ b/specifications/pageActions/pageActions.njk
@@ -1,6 +1,7 @@
 {% macro pageActions(data) %}
   <div class="moj-page-header-actions">
-    <h1 class="govuk-heading-xl">{{ data }}</h1>
+    <h1 class="govuk-heading-xl">{{ data.heading }}</h1>
+
     <div class="moj-page-header-actions__actions">
       <div class="moj-button-menu">
       	<div class="moj-button-menu__wrapper">
@@ -9,7 +10,17 @@
       		</a>
       	</div>
         <div class="govuk-!-font-size-19 govuk-!-margin-top-2" style="float: right; font-family: GDS Transport">
-  	      <a href="/admin/flow">Flow</a> / <a href="/admin">List</a>
+          {% if data.flowActive %}
+            <span>Flow</span>
+          {% else %}
+            <a href="/admin/flow">Flow</a>
+          {% endif %}
+  	       /
+          {% if data.listActive %}
+            <span>List</span>
+          {% else %}
+            <a href="/admin">List</a>
+          {% endif %}
         </div>
       </div>
     </div>
