Add style to the navigation modes into the new navigation

--- a/assets/stylesheets/app-0.1.6.css
+++ b/assets/stylesheets/app-0.1.6.css
@@ -9512,7 +9512,7 @@ span.moj-header__link:hover {
 .fb-navigation-modes {
   position: absolute;
   right: 1.5rem;
-  margin-top: -2.75rem;
+  margin-top: .5rem;
   border: 1px solid #797979
 }
 
