Change content on the editor
Edit default strings -> Global content
Configure form -> Settings
Page flow -> Pages

--- a/assets/stylesheets/app-0.2.0.css
+++ b/assets/stylesheets/app-0.2.0.css
@@ -7976,7 +7976,8 @@ span.moj-header__link:hover {
 }
 
 .moj-primary-navigation {
-  background-color: #f3f2f1
+  background-color: #f3f2f1;
+  border-bottom: none!important
 }
 
 .moj-primary-navigation__container {
@@ -9324,6 +9325,8 @@ span.moj-header__link:hover {
 }
 
 .moj-editor-primary-navigation__container {
+  background: #f8f8f8;
+  border-bottom: 1px solid #b3b9be;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -9339,11 +9342,11 @@ span.moj-header__link:hover {
 .moj-primary-navigation__identity-title {
   display: inline-block;
   font-family: GDS Transport,Arial,sans-serif;
-  font-size: 16px;
+  font-size: 28.5px;
   font-weight: 700;
   line-height: 1.25;
   margin-left: 1rem;
-  margin-top: 1rem;
+  margin-top: 18px;
   vertical-align: middle
 }
 
@@ -9355,6 +9358,13 @@ span.moj-header__link:hover {
 .moj-button-menu {
   display: inline-block;
   position: relative
+}
+
+.moj-page-action-links {
+  float: right;
+  font-family: GDS Transport,Arial,sans-serif;
+  font-size: 28.5px;
+  margin-top: 20px
 }
 
 .editor-page-flow .fb-editor-header--wrapper + .govuk-width-container {
