--- a/specifications/pageActions/pageActions.njk
+++ b/specifications/pageActions/pageActions.njk
@@ -9,7 +9,7 @@
       		Add page
       		</a>
       	</div>
-        <div class="govuk-!-font-size-19 govuk-!-margin-top-2" style="float: right; font-family: GDS Transport">
+        <div class="moj-page-action-links">
           {% if data.flowActive %}
             <span>Flow</span>
           {% else %}
