--- a/templates/nunjucks/base.njk.html
+++ b/templates/nunjucks/base.njk.html
@@ -88,7 +88,7 @@
 </div>
 
 {% if flowActive %}
-  {{ callMacro('pageActions', { heading: 'Page flow', flowActive: flowActive }) }}
+  {{ callMacro('pageActions', { heading: 'Pages', flowActive: flowActive }) }}
 {% endif %}
 
 {% if listActive %}
