--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -32,7 +32,7 @@
 .moj-primary-navigation__identity-title {
   display: inline-block;
   font-family: "GDS Transport", Arial, sans-serif;
-  font-size: 28.5px;
+  font-size: 1.5vw;
   font-weight: bold;
   line-height: 1.25;
   margin-left: 1rem;
@@ -76,6 +76,10 @@
   bottom: 6rem;
   margin-left: 4rem;
   position: relative;
+}
+
+.editor-page-list .govuk-footer .govuk-width-container { // stylelint-disable-line no-descending-specificity
+  position: static !important;
 }
 
 .govuk-skip-link + .govuk-width-container { // stylelint-disable-line no-descending-specificity
@@ -259,7 +263,7 @@ li.fb-navigation-mode-current,
   padding: 0.25rem 1rem;
   min-width: 6rem;
   text-align: center;
-  font-size: 1.1875rem;
+  font-size: 1.5vw;
   background-color: #dee0e2;
   color: #71777b;
   text-decoration: none;
@@ -301,7 +305,7 @@ li.fb-navigation-mode-current:hover {
 
   .fb-navigation li a {
     display: inline-block;
-    font-size: 1.1875rem;
+    font-size: 1.5vw;
     font-weight: bold;
   }
 
