Change font size on page actions to be responsive

--- a/assets/stylesheets/app-0.2.2.css
+++ b/assets/stylesheets/app-0.2.2.css
@@ -9363,7 +9363,7 @@ span.moj-header__link:hover {
 .moj-page-action-links {
   float: right;
   font-family: GDS Transport,Arial,sans-serif;
-  font-size: 28.5px;
+  font-size: 2vw;
   margin-top: 20px
 }
 
