--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -64,7 +64,7 @@
 .moj-page-action-links {
   float: right;
   font-family: "GDS Transport", Arial, sans-serif;
-  font-size: 28.5px;
+  font-size: 2vw;
   margin-top: 20px;
 }
 
