--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -32,7 +32,7 @@
 .moj-primary-navigation__identity-title {
   display: inline-block;
   font-family: "GDS Transport", Arial, sans-serif;
-  font-size: 1.5vw;
+  font-size: 1rem;
   font-weight: bold;
   line-height: 1.25;
   margin-left: 1rem;
@@ -64,7 +64,7 @@
 .moj-page-action-links {
   float: right;
   font-family: "GDS Transport", Arial, sans-serif;
-  font-size: 2vw;
+  font-size: 1rem;
   margin-top: 20px;
 }
 
@@ -305,7 +305,7 @@ li.fb-navigation-mode-current:hover {
 
   .fb-navigation li a {
     display: inline-block;
-    font-size: 1.5vw;
+    font-size: 1.1875rem;
     font-weight: bold;
   }
 
