Surface the footer links admin page
We need to provide the ability for the footer links to be more easily
edited by a user. We chose to put the link to this page in the Global
Content section of the editor.

Co-authored-by: <Tomas Destefi tomas.destefi@digital.justice.gov.uk>
Co-authored-by: <Matt Tei matt.tei@digital.justice.gov.uk>
Co-authored-by: <Natalie Seeto natalie.seeto@digital.justice.gov.uk>

--- a/assets/stylesheets/app-0.2.3.css
+++ b/assets/stylesheets/app-0.2.3.css
@@ -68,7 +68,7 @@
 .govuk-link--muted:hover,
 .govuk-link--muted:link,
 .govuk-link--muted:visited {
-  color: #626a6e
+  color: #505a5f
 }
 
 .govuk-link--muted:focus,
@@ -373,7 +373,7 @@
   line-height: 1.11111;
   display: block;
   margin-bottom: 5px;
-  color: #626a6e
+  color: #505a5f
 }
 
 @media print {
@@ -405,7 +405,7 @@
   line-height: 1.11111;
   display: block;
   margin-bottom: 5px;
-  color: #626a6e
+  color: #505a5f
 }
 
 @media print {
@@ -442,7 +442,7 @@
   font-size: 1rem;
   line-height: 1.25;
   display: block;
-  color: #626a6e
+  color: #505a5f
 }
 
 @media print {
@@ -1353,7 +1353,7 @@
   transform: rotate(225deg);
   border: solid;
   border-width: 1px 1px 0 0;
-  border-color: #626a6e
+  border-color: #505a5f
 }
 
 .govuk-back-link:after {
@@ -1432,7 +1432,7 @@
   transform: rotate(45deg);
   border: solid;
   border-width: 1px 1px 0 0;
-  border-color: #626a6e
+  border-color: #505a5f
 }
 
 .govuk-breadcrumbs__list-item:first-child {
@@ -1932,7 +1932,7 @@
   line-height: 1.25;
   display: block;
   margin-bottom: 15px;
-  color: #626a6e
+  color: #505a5f
 }
 
 @media print {
@@ -2181,30 +2181,31 @@
 }
 
 .govuk-checkboxes__label:before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
   top: 0;
   left: 0;
   width: 40px;
   height: 40px;
-  border: 2px solid;
+  border: 2px solid
+}
+
+.govuk-checkboxes__label:after,
+.govuk-checkboxes__label:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
   background: 0 0
 }
 
 .govuk-checkboxes__label:after {
-  content: "";
-  position: absolute;
   top: 11px;
   left: 9px;
-  width: 18px;
-  height: 7px;
+  width: 23px;
+  height: 12px;
   transform: rotate(-45deg);
   border: solid;
   border-width: 0 0 5px 5px;
   border-top-color: transparent;
-  opacity: 0;
-  background: 0 0
+  opacity: 0
 }
 
 .govuk-checkboxes__hint {
@@ -2290,8 +2291,8 @@
 .govuk-checkboxes--small .govuk-checkboxes__label:after {
   top: 15px;
   left: 6px;
-  width: 9px;
-  height: 3.5px;
+  width: 12px;
+  height: 6.5px;
   border-width: 0 0 3px 3px
 }
 
@@ -2383,12 +2384,11 @@
 }
 
 .govuk-textarea--error {
-  border: 4px solid #d4351c
+  border: 2px solid #d4351c
 }
 
 .govuk-textarea--error:focus {
-  border-color: #0b0c0c;
-  box-shadow: none
+  border-color: #0b0c0c
 }
 
 .govuk-character-count {
@@ -2405,10 +2405,6 @@
 .govuk-character-count .govuk-textarea,
 .govuk-character-count .moj-rich-text-editor__content {
   margin-bottom: 5px
-}
-
-.govuk-character-count .govuk-textarea--error {
-  padding: 3px
 }
 
 .govuk-character-count__message {
@@ -2656,12 +2652,11 @@
 }
 
 .govuk-input--error {
-  border: 4px solid #d4351c
+  border: 2px solid #d4351c
 }
 
 .govuk-input--error:focus {
-  border-color: #0b0c0c;
-  box-shadow: none
+  border-color: #0b0c0c
 }
 
 .govuk-input--width-30 {
@@ -3006,24 +3001,6 @@
   padding-left: 5px;
   outline: 3px solid #fd0;
   box-shadow: inset 0 0 0 4px #0b0c0c
-}
-
-.govuk-file-upload--error {
-  margin-right: -5px;
-  margin-left: -5px;
-  padding-right: 5px;
-  padding-left: 5px;
-  border: 4px solid #d4351c
-}
-
-.govuk-file-upload--error:focus {
-  border-color: #0b0c0c;
-  box-shadow: none
-}
-
-.govuk-file-upload--error:focus-within {
-  border-color: #0b0c0c;
-  box-shadow: none
 }
 
 .govuk-footer {
@@ -3886,12 +3863,12 @@ only screen and (min-resolution:192dpi) {
 }
 
 .govuk-tag--inactive {
-  background-color: #626a6e
+  background-color: #505a5f
 }
 
 .govuk-tag--grey {
-  color: #454a4d;
-  background: #eff0f1
+  color: #383f43;
+  background: #eeefef
 }
 
 .govuk-tag--purple {
@@ -4532,12 +4509,11 @@ only screen and (min-resolution:192dpi) {
 }
 
 .govuk-select--error {
-  border: 4px solid #d4351c
+  border: 2px solid #d4351c
 }
 
 .govuk-select--error:focus {
-  border-color: #0b0c0c;
-  box-shadow: none
+  border-color: #0b0c0c
 }
 
 .govuk-skip-link {
@@ -4619,6 +4595,7 @@ only screen and (min-resolution:192dpi) {
 
 .govuk-skip-link:focus {
   outline: 3px solid #fd0;
+  outline-offset: 0;
   background-color: #fd0
 }
 
@@ -4743,11 +4720,12 @@ only screen and (min-resolution:192dpi) {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 700;
+  box-sizing: border-box;
   display: inline-block;
   position: absolute;
   left: 0;
-  min-width: 29px;
-  min-height: 29px;
+  min-width: 35px;
+  min-height: 35px;
   margin-top: -7px;
   border: 3px solid #0b0c0c;
   border-radius: 50%;
@@ -6153,7 +6131,7 @@ only screen and (min-resolution:192dpi) {
   }
 
   .moj-scrollable-pane > div::-webkit-scrollbar-thumb {
-    background: #626a6e;
+    background: #505a5f;
     border-radius: 5px
   }
 }
@@ -6291,8 +6269,8 @@ only screen and (min-resolution:192dpi) {
 }
 
 .moj-badge--grey {
-  border-color: #626a6e;
-  color: #626a6e
+  border-color: #505a5f;
+  color: #505a5f
 }
 
 .moj-badge--large {
@@ -7365,7 +7343,7 @@ span.moj-header__link:hover {
   font-size: 1rem;
   line-height: 1.25;
   padding: 15px 0;
-  color: #626a6e;
+  color: #505a5f;
   display: inline-block;
   text-align: center;
   width: 100%
@@ -8582,7 +8560,7 @@ span.moj-header__link:hover {
   -moz-osx-font-smoothing: grayscale;
   font-size: 1rem;
   line-height: 1.25;
-  color: #626a6e;
+  color: #505a5f;
   font-weight: 400;
   margin: 0;
   padding: 10px 10px 10px 14px
@@ -8974,8 +8952,8 @@ span.moj-header__link:hover {
 }
 
 .moj-tag--grey {
-  border: 2px solid #626a6e;
-  background-color: #626a6e;
+  border: 2px solid #505a5f;
+  background-color: #505a5f;
   color: #fff
 }
 
@@ -9190,7 +9168,7 @@ span.moj-header__link:hover {
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.25;
-  color: #626a6e;
+  color: #505a5f;
   display: inline;
   margin: 0
 }
