Navigation link changes on Admin page
Added underline on hover to the Form Builder Editor as well as
converting the service name to be a hyperlink to the admin flow page.

--- a/assets/stylesheets/app-0.2.7.css
+++ b/assets/stylesheets/app-0.2.7.css
@@ -9864,4 +9864,8 @@ button.govuk-button.fb-editor-button {
 .fb-block--add:active:before {
   top: 0
 }
+
+.fb-underline-on-hover:hover {
+  text-decoration: underline
+}
 /*# sourceMappingURL=app-0.2.7.css.map */
