Only surface production dependencies

--- a/assets/stylesheets/page.editable-0.2.13.css
+++ b/assets/stylesheets/page.editable-0.2.13.css
@@ -75,10 +75,7 @@ main.govuk-main-wrapper {
   line-height: 1.375
 }
 
-.fb-block-instance-properties li + li.fb-block-instance--all {
-  margin-top: 1rem
-}
-
+.fb-block-instance-properties li + li.fb-block-instance--all,
 .fb-block-instance-properties li.fb-block-instance--delete {
   margin-top: 1rem
 }
