--- a/assets/stylesheets/app-0.2.13.css
+++ b/assets/stylesheets/app-0.2.13.css
@@ -34,8 +34,7 @@
   outline: 3px solid transparent;
   background-color: #fd0;
   box-shadow: 0 -2px #fd0,0 4px #0b0c0c;
-  text-decoration: none;
-  color: #0b0c0c
+  text-decoration: none
 }
 
 .govuk-link:link {
@@ -50,7 +49,8 @@
   color: #003078
 }
 
-.govuk-link:active {
+.govuk-link:active,
+.govuk-link:focus {
   color: #0b0c0c
 }
 
@@ -71,10 +71,7 @@
   color: #505a5f
 }
 
-.govuk-link--muted:focus {
-  color: #0b0c0c
-}
-
+.govuk-link--muted:focus,
 .govuk-link--text-colour:active,
 .govuk-link--text-colour:focus,
 .govuk-link--text-colour:hover,
@@ -102,11 +99,9 @@
   color: #003078
 }
 
-.govuk-link--no-visited-state:active {
-  color: #0b0c0c
-}
-
-.govuk-link--no-visited-state:focus {
+.govuk-link--no-visited-state:active,
+.govuk-link--no-visited-state:focus,
+.govuk-list {
   color: #0b0c0c
 }
 
@@ -117,7 +112,6 @@
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.25;
-  color: #0b0c0c;
   margin-top: 0;
   margin-bottom: 15px;
   padding-left: 0;
@@ -193,6 +187,9 @@
 
 .govuk-template {
   background-color: #f3f2f1;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
   text-size-adjust: 100%
 }
 
@@ -1210,8 +1207,7 @@
   outline: 3px solid transparent;
   background-color: #fd0;
   box-shadow: 0 -2px #fd0,0 4px #0b0c0c;
-  text-decoration: none;
-  color: #0b0c0c
+  text-decoration: none
 }
 
 .js-enabled .govuk-accordion__open-all:link {
@@ -1226,7 +1222,8 @@
   color: #003078
 }
 
-.js-enabled .govuk-accordion__open-all:active {
+.js-enabled .govuk-accordion__open-all:active,
+.js-enabled .govuk-accordion__open-all:focus {
   color: #0b0c0c
 }
 
@@ -2026,11 +2023,8 @@
   }
 }
 
+.govuk-fieldset__legend:not(.govuk-fieldset__legend--m):not(.govuk-fieldset__legend--l):not(.govuk-fieldset__legend--xl) + .govuk-hint,
 .govuk-label:not(.govuk-label--m):not(.govuk-label--l):not(.govuk-label--xl) + .govuk-hint {
-  margin-bottom: 10px
-}
-
-.govuk-fieldset__legend:not(.govuk-fieldset__legend--m):not(.govuk-fieldset__legend--l):not(.govuk-fieldset__legend--xl) + .govuk-hint {
   margin-bottom: 10px
 }
 
@@ -2255,21 +2249,22 @@
 }
 
 .govuk-checkboxes__label:before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
   top: 0;
   left: 0;
   width: 40px;
   height: 40px;
-  border: 2px solid;
+  border: 2px solid
+}
+
+.govuk-checkboxes__label:after,
+.govuk-checkboxes__label:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
   background: 0 0
 }
 
 .govuk-checkboxes__label:after {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
   top: 11px;
   left: 9px;
   width: 23px;
@@ -2278,8 +2273,7 @@
   border: solid;
   border-width: 0 0 5px 5px;
   border-top-color: transparent;
-  opacity: 0;
-  background: 0 0
+  opacity: 0
 }
 
 .govuk-checkboxes__hint {
@@ -4141,8 +4135,7 @@ only screen and (min-resolution:192dpi) {
   outline: 3px solid transparent;
   background-color: #fd0;
   box-shadow: 0 -2px #fd0,0 4px #0b0c0c;
-  text-decoration: none;
-  color: #0b0c0c
+  text-decoration: none
 }
 
 .govuk-notification-banner__link:link,
@@ -4154,7 +4147,8 @@ only screen and (min-resolution:192dpi) {
   color: #003078
 }
 
-.govuk-notification-banner__link:active {
+.govuk-notification-banner__link:active,
+.govuk-notification-banner__link:focus {
   color: #0b0c0c
 }
 
@@ -7000,11 +6994,8 @@ only screen and (min-resolution:192dpi) {
   background-image: url(/assets/images/icon-arrow-white-down.svg)
 }
 
+.moj-button-menu__toggle-button[aria-expanded=true]:after,
 .moj-button-menu__toggle-button[aria-expanded=true]:hover:after {
-  background-image: url(/assets/images/icon-arrow-white-up.svg)
-}
-
-.moj-button-menu__toggle-button[aria-expanded=true]:after {
   background-image: url(/assets/images/icon-arrow-white-up.svg)
 }
 
@@ -8262,8 +8253,7 @@ span.moj-header__link:hover {
   outline: 3px solid transparent;
   background-color: #fd0;
   box-shadow: 0 -2px #fd0,0 4px #0b0c0c;
-  text-decoration: none;
-  color: #0b0c0c
+  text-decoration: none
 }
 
 .moj-organisation-nav__link:link {
@@ -8278,7 +8268,8 @@ span.moj-header__link:hover {
   color: #003078
 }
 
-.moj-organisation-nav__link:active {
+.moj-organisation-nav__link:active,
+.moj-organisation-nav__link:focus {
   color: #0b0c0c
 }
 
@@ -9973,8 +9964,8 @@ span.moj-header__link:hover {
 }
 
 .fb-editor-liveheader a:hover {
-  border-color: rgba(244,160,56,.9803921568627451);
-  background-color: rgba(244,160,56,.9803921568627451)
+  border-color: rgba(244,160,56,.98);
+  background-color: rgba(244,160,56,.98)
 }
 
 .fb-editor-header {
